--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
             <table><tr><td class="logo">
                 <h1>
                     <a href="/">
-                        <img src="/assets/{{ website.version }}/logo.png"
+                        <img src="{{ website.asset_version_url }}/logo.png"
                              alt="Gittip" />
                     </a>
                 </h1>
@@ -62,7 +62,7 @@
 
         <div id="footer">
             <div class="social">
-                <a href="https://twitter.com/gittip"><img src="/assets/icons/twitter.16.png" /></a>
+                <a href="https://twitter.com/gittip"><img src="{{ website.asset_url }}/icons/twitter.16.png" /></a>
             </div>
             <ul>
                 <li><a href='http://blog.gittip.com/'>Blog</a></li>
