--- a/templates/connected-accounts.html
+++ b/templates/connected-accounts.html
@@ -2,7 +2,7 @@
 <table id="accounts">
     <tr>
         <td class="account-type">
-            <img src="/assets/twitter.png" />
+            <img src="{{ website.asset_url }}/twitter.png" />
         </td>
         <td class="account-details">
             {% if twitter_account == None %}
@@ -14,7 +14,7 @@
             {% else %}
             <a rel="me" href="{{ twitter_account.user_info.get('html_url', '')|e }}"
                 ><img class="avatar"
-                src="{{ twitter_account.user_info.get('profile_image_url_https', '/assets/%s/no-avatar.png' % website.version )|e }}"
+                src="{{ twitter_account.user_info.get('profile_image_url_https', '%s/no-avatar.png' % website.asset_url )|e }}"
                 />{{ twitter_account.user_info.get('screen_name')|e }}
                 {% if twitter_account.user_info.get('name') and twitter_account.user_info.get('name') != twitter_account.user_info.get('screen_name') %}
                 ({{ twitter_account.user_info.get('name')|e }})
@@ -26,7 +26,7 @@
     </tr>
     <tr>
         <td class="account-type">
-            <img src="/assets/octocat.png" />
+            <img src="{{ website.asset_url }}/octocat.png" />
         </td>
         <td class="account-details">
             {% if github_account == None %}
@@ -37,7 +37,7 @@
                 {% endif %}
             {% else %}
             <a rel="me" href="{{ github_account.user_info.get('html_url', '')|e }}"
-                ><img class="avatar" src="{{ github_account.user_info.get('avatar_url', '/assets/%s/no-avatar.png' % website.version)|e }}"
+                ><img class="avatar" src="{{ github_account.user_info.get('avatar_url', '%s/no-avatar.png' % website.asset_url)|e }}"
                 />{{ github_account.user_info.get('login')|e }}
                 {% if github_account.user_info.get('name') and github_account.user_info.get('name') != github_account.user_info.get('login') %}
                 ({{ github_account.user_info.get('name')|e }})
@@ -49,7 +49,7 @@
     </tr>
     <tr>
         <td class="account-type">
-            <img src="/assets/bitbucket.png" />
+            <img src="{{ website.asset_url }}/bitbucket.png" />
         </td>
         <td class="account-details">
             {% if bitbucket_account == None %}
@@ -61,7 +61,7 @@
             {% else %}
             <a rel="me" href="{{ bitbucket_account.user_info.get('html_url', '')|e }}"
                 ><img class="avatar"
-                src="{{ bitbucket_account.user_info.get('avatar', '/assets/%s/no-avatar.png' % website.version)|e }}"
+                src="{{ bitbucket_account.user_info.get('avatar', '%s/no-avatar.png' % website.asset_url)|e }}"
                 />{{ bitbucket_account.user_info.get('username') }}
                 {% if bitbucket_account.user_info.get('display_name') and bitbucket_account.user_info.get('display_name') != bitbucket_account.user_info.get('username') %}
                 ({{ bitbucket_account.user_info.get('display_name')|e }})
@@ -73,7 +73,7 @@
     </tr>
     <tr>
       <td class="account-type">
-        <img src="/assets/bountysource.png" />
+        <img src="{{ website.asset_url }}/bountysource.png" />
       </td>
       <td class="account-details">
         {% if bountysource_account == None %}
@@ -85,7 +85,7 @@
         {% else %}
             <a href="{{ bountysource_account.user_info.get('frontend_url', 'https://www.bountysource.com')|e }}"
                 ><img class="avatar"
-                      src="{{ bountysource_account.user_info.get('image_url', '/assets/%s/no-avatar.png' % website.version)|e }}"
+                      src="{{ bountysource_account.user_info.get('image_url', '%s/no-avatar.png' % website.asset_url)|e }}"
             />{{ bountysource_account.user_info.get('display_name') }}
             {% if bountysource_account.user_info.get('first_name') and bountysource_account.user_info.get('last_name') %}
                 ({{ bountysource_account.user_info.get('first_name')|e }} {{ bountysource_account.user_info.get('last_name')|e }})
@@ -97,7 +97,7 @@
     </tr>
     <tr>
       <td class="account-type">
-        <img src="/assets/venmo.png" />
+        <img src="{{ website.asset_url }}/venmo.png" />
       </td>
       <td class="account-details">
         {% if venmo_account == None %}
@@ -118,7 +118,7 @@
     </tr>
     <tr>
         <td class="account-type">
-            <img src="/assets/openstreetmap.png" />
+            <img src="{{ website.asset_url }}/openstreetmap.png" />
         </td>
         <td class="account-details">
             {% if openstreetmap_account == None %}
@@ -130,7 +130,7 @@
             {% else %}
             <a rel="me" href="{{ openstreetmap_account.user_info.get('html_url', '')|e }}"
                 ><img class="avatar"
-                src="{{ openstreetmap_account.user_info.get('img_src', '/assets/%s/no-avatar.png' % website.version)|e }}"
+                src="{{ openstreetmap_account.user_info.get('img_src', '%s/no-avatar.png' % website.asset_url)|e }}"
                 />{{ openstreetmap_account.user_info.get('username')|e }}
             </a>
             <div class="account-type">on OpenStreetMap</div>
@@ -139,7 +139,7 @@
     </tr>
     <tr>
         <td class="account-type">
-            <img src="/assets/balanced-avatar.png" />
+            <img src="{{ website.asset_url }}/balanced-avatar.png" />
         </td>
         <td class="account-details">
             {% if user.participant == participant %}
@@ -170,7 +170,7 @@
     </tr>
     <tr>
         <td class="account-type">
-            <img src="/assets/bitcoin.png" />
+            <img src="{{ website.asset_url }}/bitcoin.png" />
         </td>
         <td class="account-details">
 
